testdata/fixtures/018_chain_cause.err
Traceback (most recent call last):
  File "../../testdata/fixtures/018_chain_cause.py", line 3, in convert
ValueError: invalid literal for int() with base 10: 'x12'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "../../testdata/fixtures/018_chain_cause.py", line 6, in <module>
  File "../../testdata/fixtures/018_chain_cause.py", line 5, in convert
TypeError: bad input
