testdata/fixtures/018_chain_cause.py
def convert():
    try:
        int("x12")
    except ValueError as e:
        raise TypeError("bad input") from e
convert()
